Basic notebook is working

--- a/doc/tutorials/cloud/00_setup.ipynb
+++ b/doc/tutorials/cloud/00_setup.ipynb
@@ -265,33 +265,42 @@
    "outputs": [],
    "source": [
     "def setup_scripts(conf: SandboxConfig, bucketfs_jar: str):\n",
-    "    sqls = [\n",
-    "        f\"OPEN SCHEMA {conf.SCHEMA}\",\n",
-    "        f\"\"\"\n",
+    "    sqls = [ \n",
+    "        \"OPEN SCHEMA {schema!i}\",\n",
+    "        \"\"\"\n",
+    "--/\n",
     "            CREATE OR REPLACE JAVA SET SCRIPT IMPORT_PATH(...) EMITS (...) AS\n",
     "              %scriptclass com.exasol.cloudetl.scriptclasses.FilesImportQueryGenerator;\n",
-    "              %jar {bucketfs_jar};\n",
+    "              %jar {jar_path!r};\n",
+    "/\n",
     "        \"\"\",\n",
-    "        f\"\"\"\n",
-    "            CREATE OR REPLACE JAVA SCALAR SCRIPT IMPORT_METADATA(...) \n",
-    "              EMITS (\n",
-    "                    filename VARCHAR(2000), \n",
-    "                    partition_index VARCHAR(100), \n",
-    "                    start_index DECIMAL(36, 0), \n",
-    "                    end_index DECIMAL(36, 0)\n",
-    "              ) AS\n",
-    "              %scriptclass com.exasol.cloudetl.scriptclasses.FilesMetadataReader;\n",
-    "              %jar {bucketfs_jar};    \n",
+    "        \"\"\"\n",
+    "--/\n",
+    "        CREATE OR REPLACE JAVA SCALAR SCRIPT IMPORT_METADATA(...) \n",
+    "          EMITS (\n",
+    "                filename VARCHAR(2000), \n",
+    "                partition_index VARCHAR(100), \n",
+    "                start_index DECIMAL(36, 0), \n",
+    "                end_index DECIMAL(36, 0)\n",
+    "          ) AS\n",
+    "          %scriptclass com.exasol.cloudetl.scriptclasses.FilesMetadataReader;\n",
+    "          %jar {jar_path!r};\n",
+    "/\n",
     "        \"\"\",\n",
-    "        f\"\"\"\n",
-    "            CREATE OR REPLACE JAVA SET SCRIPT IMPORT_FILES(...) EMITS (...) AS\n",
-    "              %scriptclass com.exasol.cloudetl.scriptclasses.FilesDataImporter;\n",
-    "              %jar {bucketfs_jar};    \n",
+    "        \"\"\"\n",
+    "--/\n",
+    "        CREATE OR REPLACE JAVA SET SCRIPT IMPORT_FILES(...) EMITS (...) AS\n",
+    "          %scriptclass com.exasol.cloudetl.scriptclasses.FilesDataImporter;\n",
+    "          %jar {jar_path!r};\n",
+    "/\n",
     "        \"\"\"\n",
     "    ]\n",
     "    with pyexasol.connect(**conf.connection_params) as conn:\n",
     "        for sql in sqls:\n",
-    "            conn.execute(sql)"
+    "            conn.execute(sql, query_params={\n",
+    "                \"schema\": conf.SCHEMA,\n",
+    "                \"jar_path\": bucketfs_jar,\n",
+    "            })"
    ],
    "metadata": {
     "collapsed": false,
