--- a/doc/tutorials/transformer/model_retrieval.ipynb
+++ b/doc/tutorials/transformer/model_retrieval.ipynb
@@ -67,7 +67,7 @@
    "source": [
     "## Loading model using the notebook\n",
     "\n",
-    "Here is the second way of loading the model. This method is very similar to the command line interface. For details on how to use the CLI please refer to Transformer Extension <a href=\"https://github.com/exasol/transformers-extension/blob/main/doc/user_guide/user_guide.md\" target=\"_blank\" rel=\"noopener\">User Guide</a>."
+    "Here is the second way of loading the model. This method is very similar to the command line interface. For details on how to use the CLI please refer to the Transformer Extension <a href=\"https://github.com/exasol/transformers-extension/blob/main/doc/user_guide/user_guide.md\" target=\"_blank\" rel=\"noopener\">User Guide</a>."
    ]
   },
   {
@@ -116,7 +116,9 @@
    "id": "8332928b-6ee5-4a04-aca3-4e60c93836f5",
    "metadata": {},
    "source": [
-    "## Method selector"
+    "## Method selector\n",
+    "\n",
+    "This is the main entry point. The call will be dispatched to one of the above functions depending on the selected method."
    ]
   },
   {
