--- a/doc/tutorials/transformer/question_answering.ipynb
+++ b/doc/tutorials/transformer/question_answering.ipynb
@@ -14,7 +14,7 @@
     "## Prerequisites\n",
     "\n",
     "Prior to using this notebook the following steps need to be completed:\n",
-    "1. [Configure the sandbox](../sendbox_config.ipynb).\n",
+    "1. [Configure the sandbox](../sandbox_config.ipynb).\n",
     "2. [Initialize the Transformer Extension](te_init.ipynb).\n",
     "\n",
     "## Set up"
@@ -79,7 +79,7 @@
    "id": "cd5e24a7-ecde-42cb-bdff-7df4fc4f5c84",
    "metadata": {},
    "source": [
-    "Let's bring up JupySQL and connect to the database via SQLAlchemy. Please refer to the documentation of <a href=\"https://github.com/exasol/sqlalchemy-exasol\" target=\"_blank\" rel=\"noopener\">sqlalchemy-exasol</a> for details on how to connect to the database using Exasol SQLAlchemy driver."
+    "Let's bring up JupySQL and connect to the database via SQLAlchemy. Please refer to the documentation of <a href=\"https://github.com/exasol/sqlalchemy-exasol\" target=\"_blank\" rel=\"noopener\">sqlalchemy-exasol</a> for details on how to connect to the database using the Exasol SQLAlchemy driver."
    ]
   },
   {
@@ -250,11 +250,11 @@
    "id": "64bb5eca-b4e0-447c-bafd-f273c7c53a70",
    "metadata": {},
    "source": [
-    "The code above shows how the model works on a toy example. However, the main purpose of having a model deployed in the database is getting quick response for a batch input. The performance gain comes from two factors - localization and parallelization. The first means that the input data never crosses the machine boundaries. The second means that multiple instances of the model are processing the data on all available nodes in parallel.\n",
+    "The code above shows how the model works on a toy example. However, the main purpose of having a model deployed in the database is to get a quick response for a batch input. The performance gain comes from two factors - localization and parallelization. The first means that the input data never crosses the machine boundaries. The second means that multiple instances of the model are processing the data on all available nodes in parallel.\n",
     "\n",
     "Another advantage of making predictions within the database is the enhanced data security. The task of safeguarding privacy can be simplified giving the fact that the source data never leaves the database machine.\n",
     "\n",
-    "In a more practical application the question and the context would be stored in columns of a database table. For example, if we wanted to get the best answer for each row of the input table `MY_TEXT_TABLE` where the question is in the column `MY_QUESTION` and the context is in the column `MY_CONTEXT` the SQL would look similar to this:\n",
+    "In a more practical application the question and the context would be stored in columns of a database table. For example, if we wanted to get the best answer for each row of the input table `MY_TEXT_TABLE`, where the question is in the column `MY_QUESTION` and the context is in the column `MY_CONTEXT`, the SQL would look similar to this:\n",
     "```\n",
     "SELECT TE_QUESTION_ANSWERING_UDF(..., MY_QUESTION, MY_CONTEXT, 1) FROM MY_TEXT_TABLE;\n",
     "```\n",
