--- a/doc/tutorials/transformer/te_init.ipynb
+++ b/doc/tutorials/transformer/te_init.ipynb
@@ -14,7 +14,7 @@
     "## Prerequisites\n",
     "\n",
     "Prior to using this notebook one needs to complete the follow steps:\n",
-    "1. [Configure the sandbox](../sendbox_config.ipynb).\n",
+    "1. [Configure the sandbox](../sandbox_config.ipynb).\n",
     "\n",
     "## Set up"
    ]
@@ -176,7 +176,7 @@
    "metadata": {},
    "source": [
     "### BucketFS connection\n",
-    "Let's create a connection to the BucketFS where we are going to store all our models. We will use this connection hereafter in the queries.\n",
+    "Let's create a connection to the BucketFS where we are going to store all our models. <a href=\"https://docs.exasol.com/db/latest/database_concepts/bucketfs/bucketfs.htm\" target=\"_blank\" rel=\"noopener\">BucketFS</a> is a replicated file system available in the Exasol cluster. We will use this connection hereafter in the queries.\n",
     "\n",
     "Notice that we specify a sub-directory of the bucket root, e.g. \"my_storage\" (the name can be chosen arbitrarily). The BucketFS will create this sub-directory for us the first time we use the connection."
    ]
@@ -215,7 +215,7 @@
    "source": [
     "### Huggingface token connection\n",
     "\n",
-    "If we need to use Huggingface token let's put it into an Exasol connection object."
+    "If we need to use a Huggingface token let's put it into an Exasol connection object."
    ]
   },
   {
