--- a/doc/tutorials/transformer/text_generation.ipynb
+++ b/doc/tutorials/transformer/text_generation.ipynb
@@ -14,7 +14,7 @@
     "## Prerequisites\n",
     "\n",
     "Prior to using this notebook the following steps need to be completed:\n",
-    "1. [Configure the sandbox](../sendbox_config.ipynb).\n",
+    "1. [Configure the sandbox](../sandbox_config.ipynb).\n",
     "2. [Initialize the Transformer Extension](te_init.ipynb).\n",
     "\n",
     "## Set up"
