--- a/doc/tutorials/transformer/token_classification.ipynb
+++ b/doc/tutorials/transformer/token_classification.ipynb
@@ -14,7 +14,7 @@
     "## Prerequisites\n",
     "\n",
     "Prior to using this notebook the following steps need to be completed:\n",
-    "1. [Configure the sandbox](../sendbox_config.ipynb).\n",
+    "1. [Configure the sandbox](../sandbox_config.ipynb).\n",
     "2. [Initialize the Transformer Extension](te_init.ipynb).\n",
     "\n",
     "## Set up"
@@ -79,7 +79,7 @@
    "id": "226cfcbf-fef1-47ca-9134-4e9dc6f333a9",
    "metadata": {},
    "source": [
-    "Let's bring up JupySQL and connect to the database via SQLAlchemy. Please refer to the documentation of <a href=\"https://github.com/exasol/sqlalchemy-exasol\" target=\"_blank\" rel=\"noopener\">sqlalchemy-exasol</a> for details on how to connect to the database using Exasol SQLAlchemy driver."
+    "Let's bring up JupySQL and connect to the database via SQLAlchemy. Please refer to the documentation of <a href=\"https://github.com/exasol/sqlalchemy-exasol\" target=\"_blank\" rel=\"noopener\">sqlalchemy-exasol</a> for details on how to connect to the database using the Exasol SQLAlchemy driver."
    ]
   },
   {
@@ -198,11 +198,11 @@
    "id": "e1ae1f3c-5639-4935-9c28-3d8404587882",
    "metadata": {},
    "source": [
-    "The code above shows how the model works on a toy example. However, the main purpose of having a model deployed in the database is getting quick response for a batch input. The performance gain comes from two factors - localization and parallelization. The first means that the input data never crosses the machine boundaries. The second means that multiple instances of the model are processing the data on all available nodes in parallel.\n",
+    "The code above shows how the model works on a toy example. However, the main purpose of having a model deployed in the database is to get a quick response for a batch input. The performance gain comes from two factors - localization and parallelization. The first means that the input data never crosses the machine boundaries. The second means that multiple instances of the model are processing the data on all available nodes in parallel.\n",
     "\n",
     "Another advantage of making predictions within the database is the enhanced data security. The task of safeguarding privacy can be simplified giving the fact that the source data never leaves the database machine.\n",
     "\n",
-    "In a more practical application we might want to tokenize text stored in a column of a database table. One possible use case would be collecting statistics of token occurrence in say customer reviews, where each review is stored in a separate row. For example, if the text to be tokenized is stored in the column `MY_TEXT_COLUMN` of the table `MY_TEXT_TABLE` and we want to get the counts of top 10 tokens the SQL would look similar to this:\n",
+    "In a more practical application we might want to tokenize text stored in a column of a database table. One possible use case would be collecting statistics of token occurrence in say customer reviews, where each review is stored in a separate row. For example, if the text to be tokenized is stored in the column `MY_TEXT_COLUMN` of the table `MY_TEXT_TABLE` and we want to get the counts of top 10 tokens, the SQL would look similar to this:\n",
     "```\n",
     "SELECT entity, COUNT(*) as occurrence\n",
     "FROM (\n",
@@ -215,6 +215,14 @@
     "```\n",
     "Please note, that the response time observed on the provided example with a single input will not be scaled up linearly in case of multiple inputs. Much of the latency falls on loading the model into the CPU memory from BucketFS. This needs to be done only once regardless of the number of inputs."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e103aff-c848-40ab-9f96-429efe845f4e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
