--- a/doc/tutorials/transformer/translation.ipynb
+++ b/doc/tutorials/transformer/translation.ipynb
@@ -14,7 +14,7 @@
     "## Prerequisites\n",
     "\n",
     "Prior to using this notebook the following steps need to be completed:\n",
-    "1. [Configure the sandbox](../sendbox_config.ipynb).\n",
+    "1. [Configure the sandbox](../sandbox_config.ipynb).\n",
     "2. [Initialize the Transformer Extension](te_init.ipynb).\n",
     "\n",
     "## Set up"
@@ -80,7 +80,7 @@
    "metadata": {},
    "source": [
     "Let's bring up JupySQL and connect to the database via SQLAlchemy. \n",
-    "Please refer to the documentation of [sqlalchemy-exasol](https://github.com/exasol/sqlalchemy-exasol) for details on how to connect to the database using Exasol SQLAlchemy driver."
+    "Please refer to the documentation of [sqlalchemy-exasol](https://github.com/exasol/sqlalchemy-exasol) for details on how to connect to the database using the Exasol SQLAlchemy driver."
    ]
   },
   {
@@ -183,11 +183,11 @@
    "id": "2122e3ca-cfa9-4b74-b60f-13ce1429e994",
    "metadata": {},
    "source": [
-    "The code above shows how the model works on a toy example. However, the main purpose of having a model deployed in the database is getting quick response for a batch input. The performance gain comes from two factors - localization and parallelization. The first means that the input data never crosses the machine boundaries. The second means that multiple instances of the model are processing the data on all available nodes in parallel.\n",
+    "The code above shows how the model works on a toy example. However, the main purpose of having a model deployed in the database is to get a quick response for a batch input. The performance gain comes from two factors - localization and parallelization. The first means that the input data never crosses the machine boundaries. The second means that multiple instances of the model are processing the data on all available nodes in parallel.\n",
     "\n",
     "Another advantage of making predictions within the database is the enhanced data security. The task of safeguarding privacy can be simplified giving the fact that the source data never leaves the database machine.\n",
     "\n",
-    "A more practical application would involve translating multiple pieces of text stored in a column of a database table. For example, we might want to do the translation for each row of the input table `MY_TEXT_TABLE` where the text in the original language is stored in the column `MY_ORIGINAL_TEXT`. The SQL for this task would look similar to this:\n",
+    "A more practical application would involve translating multiple pieces of text stored in a column of a database table. For example, we might want to do the translation for each row of the input table `MY_TEXT_TABLE`, where the text in the original language is stored in the column `MY_ORIGINAL_TEXT`. The SQL for this task would look similar to this:\n",
     "```\n",
     "SELECT TE_TRANSLATION_UDF(..., MY_ORIGINAL_TEXT, ...) FROM MY_TEXT_TABLE;\n",
     "```\n",
