Configuration notebook, addressed review issues.

--- a/doc/tutorials/access_store_ui.ipynb
+++ b/doc/tutorials/access_store_ui.ipynb
@@ -20,6 +20,7 @@
     "def get_access_store_ui(root_dir: str = '.'):\n",
     "    \n",
     "    from pathlib import Path\n",
+    "    from enum import Enum\n",
     "    import ipywidgets as widgets\n",
     "    from exasol.secret_store import Secrets as Secrets_\n",
     "    \n",
@@ -36,8 +37,8 @@
     "                raise AttributeError(f'{key} value is not defined')\n",
     "            return value\n",
     "\n",
-    "    # Try to find the file name and the password in the shared store.\n",
-    "    # Create global variables only temporarily.\n",
+    "    # Try to find the file name in the shared store.\n",
+    "    # Create a global variable only temporarily.\n",
     "    %store -r\n",
     "    if 'sb_store_file' in globals():\n",
     "        global sb_store_file\n",
@@ -45,31 +46,25 @@
     "        del sb_store_file\n",
     "    else:\n",
     "        sb_store_file_ = 'dss_config.sqlite'\n",
-    "    if 'sb_password' in globals():\n",
-    "        global sb_password\n",
-    "        sb_password_ = sb_password\n",
-    "        del sb_password\n",
-    "    else:\n",
-    "        sb_password_ = ''\n",
     "\n",
-    "    style = {'description_width': '120px'}\n",
+    "    WKey = Enum('WKey', ['file', 'password', 'ok'])\n",
+    "    style = {'description_width': '140px'}\n",
     "    inputs = {\n",
-    "        'file':     widgets.Text(description='Config. File Name', value=sb_store_file_, style=style),\n",
-    "        'password': widgets.Password(description='Config. Password', value=sb_password_, style=style),\n",
-    "        'ok':       widgets.Button(description='OK')\n",
+    "        WKey.file:     widgets.Text(description='Config. File Name', value=sb_store_file_, style=style),\n",
+    "        WKey.password: widgets.Password(description='Config. Password', style=style),\n",
+    "        WKey.ok:       widgets.Button(description='OK')\n",
     "    }\n",
     "\n",
     "    def open_or_create_config_store(btn):\n",
-    "        global sb_config, sb_store_file, sb_password\n",
-    "        sb_store_file = inputs['file'].value\n",
-    "        sb_password = inputs['password'].value\n",
-    "        sb_config = Secrets(Path(root_dir) / sb_store_file, sb_password)\n",
-    "        # Save the file and password in the shared store.\n",
-    "        %store sb_store_file sb_password\n",
-    "        del sb_store_file, sb_password\n",
+    "        global sb_config, sb_store_file\n",
+    "        sb_store_file = inputs[WKey.file].value\n",
+    "        sb_config = Secrets(Path(root_dir) / sb_store_file, inputs[WKey.password].value)\n",
+    "        # Save the file in the shared store.\n",
+    "        %store sb_store_file\n",
+    "        del sb_store_file\n",
     "    \n",
-    "    inputs['ok'].on_click(open_or_create_config_store)\n",
-    "    \n",
+    "    inputs[WKey.ok].on_click(open_or_create_config_store)\n",
+    "\n",
     "    ui = widgets.VBox(list(inputs.values()))\n",
     "    return ui"
    ]
