--- a/doc/tutorials/sandbox_config.ipynb
+++ b/doc/tutorials/sandbox_config.ipynb
@@ -7,9 +7,9 @@
    "source": [
     "# Sandbox Configuration\n",
     "\n",
-    "This notebook must be visited at least once in order to set up main configuration parameters. These parameters include the location of the Exasol database and access credentials for the database and its BucketFS file system.\n",
+    "This notebook must be visited first, before we start with the examples, in order to set up the main configuration parameters. These parameters include the location of the Exasol database and access credentials for the database and its BucketFS file system.\n",
     "\n",
-    "Once specified the parameters are stored in a local lightweight database. All notebooks including this one access configuration data in this database. The configuration database is protected with a password.\n",
+    "Once specified the parameters are stored in a local lightweight database. All notebooks including this one access configuration data in this database. The configuration database is encrypted and protected with a password.\n",
     "\n",
     "Before starting working with any notebook in the sandbox one needs to connect to the configuration database providing the name of the file where the data is stored and the password. If the file with the specified name doesn't exist a new file will be created and protected with the entered password. However, if the file does exist it will be opened only if the provided password matches the password the file was created with.\n",
     "\n",
@@ -45,6 +45,14 @@
     "%run ./sandbox_config_ui.ipynb\n",
     "display(get_sandbox_config_ui())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ddaff7d2-00f8-48ca-b711-6353d8ea0dbc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
