--- a/doc/tutorials/sandbox_config_ui.ipynb
+++ b/doc/tutorials/sandbox_config_ui.ipynb
@@ -19,40 +19,44 @@
    "source": [
     "def get_sandbox_config_ui():\n",
     "\n",
+    "    from enum import Enum\n",
     "    import ipywidgets as widgets\n",
     "\n",
-    "    style = {'description_width': '120px'}\n",
+    "    WKey = Enum('WKey', ['db_name', 'db_port', 'db_schema', 'db_user', 'db_password', 'bfs_port', 'bfs_service', 'bfs_bucket', \n",
+    "                         'bfs_user', 'bfs_password', 'bfs_protocol', 'save'])\n",
+    "    style = {'description_width': '140px'}\n",
     "    inputs = {\n",
-    "        'db name':      widgets.Text(description='DB Host Name', value=sb_config.get('EXTERNAL_HOST_NAME', '127.0.0.1'), style=style),\n",
-    "        'db port':      widgets.IntText(description='DB Host Port', value=int(sb_config.get('HOST_PORT', '8888')), style=style),\n",
-    "        'db schema':    widgets.Text(description='DB Schema', value=sb_config.get('SCHEMA', 'IDA'), style=style),\n",
-    "        'db user':      widgets.Text(description='DB User', value=sb_config.get('USER'), style=style),\n",
-    "        'db password':  widgets.Password(description='DB Password', value=sb_config.get('PASSWORD'), style=style),\n",
-    "        'bfs port':     widgets.IntText(description='BucketFS Port', value=int(sb_config.get('BUCKETFS_PORT', '6666')), style=style),\n",
-    "        'bfs service':  widgets.Text(description='BucketFS Service', value=sb_config.get('BUCKETFS_SERVICE', 'bfsdefault'), style=style),\n",
-    "        'bfs bucket':   widgets.Text(description='BucketFS Bucket', value=sb_config.get('BUCKETFS_BUCKET', 'default'), style=style),\n",
-    "        'bfs user':     widgets.Text(description='BucketFS User', value=sb_config.get('BUCKETFS_USER'), style=style),\n",
-    "        'bfs password': widgets.Password(description='BucketFS Password', value=sb_config.get('BUCKETFS_PASSWORD'), style=style),\n",
-    "        'bfs protocol': widgets.RadioButtons(description='BucketFS Protocol', options=['http', 'https'], \n",
+    "        WKey.db_name:      widgets.Text(description='DB Host Name', value=sb_config.get('EXTERNAL_HOST_NAME', '127.0.0.1'), style=style),\n",
+    "        WKey.db_port:      widgets.IntText(description='DB Host Port', value=int(sb_config.get('HOST_PORT', '8888')), style=style),\n",
+    "        WKey.db_schema:    widgets.Text(description='DB Schema', value=sb_config.get('SCHEMA', 'IDA'), style=style),\n",
+    "        WKey.db_user:      widgets.Text(description='DB User', value=sb_config.get('USER'), style=style),\n",
+    "        WKey.db_password:  widgets.Password(description='DB Password', value=sb_config.get('PASSWORD'), style=style),\n",
+    "        WKey.bfs_port:     widgets.IntText(description='BucketFS Port', value=int(sb_config.get('BUCKETFS_PORT', '6666')), style=style),\n",
+    "        WKey.bfs_service:  widgets.Text(description='BucketFS Service Name', value=sb_config.get('BUCKETFS_SERVICE', 'bfsdefault'),\n",
+    "                                        style=style),\n",
+    "        WKey.bfs_bucket:   widgets.Text(description='BucketFS Bucket', value=sb_config.get('BUCKETFS_BUCKET', 'default'), style=style),\n",
+    "        WKey.bfs_user:     widgets.Text(description='BucketFS User', value=sb_config.get('BUCKETFS_USER'), style=style),\n",
+    "        WKey.bfs_password: widgets.Password(description='BucketFS Password', value=sb_config.get('BUCKETFS_PASSWORD'), style=style),\n",
+    "        WKey.bfs_protocol: widgets.RadioButtons(description='BucketFS Protocol', options=['http', 'https'], \n",
     "                                             value='https' if sb_config.get('BUCKETFS_USE_HTTPS', 'False')=='True' else 'http',\n",
     "                                             style=style),\n",
-    "        'save':         widgets.Button(description='Save')\n",
+    "        WKey.save:         widgets.Button(description='Save')\n",
     "    }\n",
     "    \n",
     "    def save_configuration(btn):\n",
-    "        sb_config.save('EXTERNAL_HOST_NAME', inputs['db name'].value)\n",
-    "        sb_config.save('HOST_PORT', inputs['db port'].value)\n",
-    "        sb_config.save('SCHEMA', inputs['db schema'].value)\n",
-    "        sb_config.save('USER', inputs['db user'].value),\n",
-    "        sb_config.save('PASSWORD', inputs['db password'].value),\n",
-    "        sb_config.save('BUCKETFS_PORT', inputs['bfs port'].value),\n",
-    "        sb_config.save('BUCKETFS_SERVICE', inputs['bfs service'].value),\n",
-    "        sb_config.save('BUCKETFS_BUCKET', inputs['bfs bucket'].value),\n",
-    "        sb_config.save('BUCKETFS_USER', inputs['bfs user'].value),\n",
-    "        sb_config.save('BUCKETFS_PASSWORD', inputs['bfs password'].value),\n",
-    "        sb_config.save('BUCKETFS_USE_HTTPS', str(inputs['bfs protocol'].value == 'https'))\n",
+    "        sb_config.save('EXTERNAL_HOST_NAME', inputs[WKey.db_name].value)\n",
+    "        sb_config.save('HOST_PORT', inputs[WKey.db_port].value)\n",
+    "        sb_config.save('SCHEMA', inputs[WKey.db_schema].value)\n",
+    "        sb_config.save('USER', inputs[WKey.db_user].value),\n",
+    "        sb_config.save('PASSWORD', inputs[WKey.db_password].value),\n",
+    "        sb_config.save('BUCKETFS_PORT', inputs[WKey.bfs_port].value),\n",
+    "        sb_config.save('BUCKETFS_SERVICE', inputs[WKey.bfs_service].value),\n",
+    "        sb_config.save('BUCKETFS_BUCKET', inputs[WKey.bfs_bucket].value),\n",
+    "        sb_config.save('BUCKETFS_USER', inputs[WKey.bfs_user].value),\n",
+    "        sb_config.save('BUCKETFS_PASSWORD', inputs[WKey.bfs_password].value),\n",
+    "        sb_config.save('BUCKETFS_USE_HTTPS', str(inputs[WKey.bfs_protocol].value == 'https'))\n",
     "        \n",
-    "    inputs['save'].on_click(save_configuration)\n",
+    "    inputs[WKey.save].on_click(save_configuration)\n",
     "    \n",
     "    ui = widgets.VBox(list(inputs.values()))\n",
     "    return ui"
