--- a/doc/tutorials/cloud/01_import_data.ipynb
+++ b/doc/tutorials/cloud/01_import_data.ipynb
@@ -180,7 +180,7 @@
    "source": [
     "## Importing data\n",
     "\n",
-    "Now it's time to import our data. We call the `IMPORT_PATH` script, providing location of parquet files, their format, s3 endpoint (which has to match the bucket's configuration) and name of our connection object."
+    "Now it's time to import our data. We call the `IMPORT_PATH` script, providing the location of parquet files, their format, the s3 endpoint (which has to match the bucket's configuration) and the name of our connection object."
    ],
    "metadata": {
     "collapsed": false
