Flag to use local cache of jar file

--- a/doc/tutorials/cloud/00_setup.ipynb
+++ b/doc/tutorials/cloud/00_setup.ipynb
@@ -102,11 +102,11 @@
    "execution_count": 40,
    "outputs": [],
    "source": [
-    "def get_cloud_storage_jar() -> pathlib.Path:\n",
+    "def get_cloud_storage_jar(use_local_cache: bool = True) -> pathlib.Path:\n",
     "    version, jar_url = get_latest_version_and_jar_url()\n",
     "    _, local_jar_name = jar_url.rsplit('/', maxsplit=1)\n",
     "    local_jar_path = pathlib.Path(local_jar_name)\n",
-    "    if local_jar_path.exists():\n",
+    "    if use_local_cache and local_jar_path.exists():\n",
     "        print(f\"Jar for version {version} already exists in {local_jar_path}, skip downloading\")\n",
     "    else:\n",
     "        print(f\"Fetching jar for version {version} from {jar_url}...\")\n",
